# StuManagement

./: CMakeLists.txt  README.md
header/: global.h  show_ui.h  stu_file.h  stu_service.h
source/: main.c  show_ui.c  stu_file.c  stu_service.c
